1.添加modbus模块 2.增加全局计时和日志记录单例

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,10 @@ file(GLOB FUNC_FILES
     src/func/comms/*.cpp
     src/func/comms/abstract/*.h
     src/func/comms/abstract/*.cpp
+    src/func/modbus/*.cpp
+    src/func/modbus/*.h
+    src/func/modbus/util/*.h
+    src/func/modbus/util/*.cpp
 )
 
 set(PROJECT_SOURCES
@@ -53,6 +57,10 @@ include_directories(
     ${CMAKE_SOURCE_DIR}/src/func/logger
     ${CMAKE_SOURCE_DIR}/src/func/comms
     ${CMAKE_SOURCE_DIR}/src/func/comms/abstract
+    ${CMAKE_SOURCE_DIR}/src/func/modbus/util
+    ${CMAKE_SOURCE_DIR}/src/func/modbus
+    ${CMAKE_SOURCE_DIR}/src/util
+    ${CMAKE_SOURCE_DIR}
 )
 
 qt_add_executable(SwapBatterySystem ${PROJECT_SOURCES} include/ElaWidgetTools.qrc)
