1.增加release库 2.增加监控页定时发送

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ include(qt.cmake)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
+
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
 find_package(Qt${QT_VERSION_MAJOR}
     COMPONENTS
@@ -85,7 +87,7 @@ qt_add_executable(SwapBatterySystem ${PROJECT_SOURCES} include/ElaWidgetTools.qr
 set_target_properties(SwapBatterySystem
     PROPERTIES
         WIN32_EXECUTABLE TRUE
-)
+)   
 
 target_link_libraries(SwapBatterySystem
     PUBLIC
@@ -97,3 +99,5 @@ target_link_libraries(SwapBatterySystem
         ${CMAKE_SOURCE_DIR}/lib/elawidgettoolsd.lib
 )
 
+get_property(TARGETS DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY BUILDSYSTEM_TARGETS)
+message(STATUS "Available targets: ${TARGETS}")
