1.基本实现监控记录页面 2.修改串口底层代码尝试解决闪退问题

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,7 +98,7 @@ target_link_libraries(SwapBatterySystem
         Qt::Widgets
         Qt::Network
         Qt::SerialPort
-        ${CMAKE_SOURCE_DIR}/lib/elawidgettools.lib
+        ${CMAKE_SOURCE_DIR}/lib/elawidgettoolsd.lib
 )
 
 get_property(TARGETS DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY BUILDSYSTEM_TARGETS)
